--- a/packages/frontend/src/index.css
+++ b/packages/frontend/src/index.css
@@ -26,9 +26,16 @@ a:hover {
 }
 
 body {
-  margin: 0;
   display: flex;
-  place-items: center;
+  flex-direction: column;
+  justify-content:center;
+  align-items:center;
   min-width: 320px;
   min-height: 100vh;
+}
+#root {
+  display: flex;
+  flex-direction: column;
+  justify-content:center;
+  align-items:center;
 }
