frontend: Added animated background.

--- a/packages/frontend/src/index.css
+++ b/packages/frontend/src/index.css
@@ -30,7 +30,7 @@ body {
   flex-direction: column;
   justify-content:center;
   align-items:center;
-  min-width: 320px;
+  min-width: 100%;
   min-height: 100vh;
 }
 #root {
@@ -38,4 +38,6 @@ body {
   flex-direction: column;
   justify-content:center;
   align-items:center;
+  min-width: 100%;
+  min-height: 100vh;
 }
