backend/frontend: Made it possible to set the name to the empty string. Simplified contract auto-tests. Finished implementing the Greeting form. Refactored app colors.

--- a/packages/frontend/src/styles/index.css
+++ b/packages/frontend/src/styles/index.css
@@ -5,8 +5,10 @@
 :root {
   @apply font-inter;
 
-  --ssk-light: #ffffffde;
-  --ssk-dark: #242424;
+  --sds-light: #ffffffde;
+  --sds-dark: #242424;
+  --sds-pink: #fed5f4;
+  --sds-blue: #4da2ff;
 
   color-scheme: light dark;
 
