--- a/packages/frontend/src/styles/index.css
+++ b/packages/frontend/src/styles/index.css
@@ -26,15 +26,7 @@ a:hover {
   color: #535bf2;
 }
 
-body {
-  display: flex;
-  flex-direction: column;
-  justify-content:center;
-  align-items:center;
-  min-width: 100%;
-  min-height: 100vh;
-}
-#root {
+body, #root {
   display: flex;
   flex-direction: column;
   justify-content:center;
